1.25.0 /
[Alexandr Topilski]

1.24.2 / December 17, 2018
[Alexandr Topilski]
- Stabilization

1.24.1 / December 16, 2018
[Alexandr Topilski]
- Welcome tab

1.24.0 / December 9, 2018
[Alexandr Topilski]
- [Redis] ZPOPMAX, ZPOPMIN commands
- [Redis] Clients monitor
- [DynomiteDB] Added support

1.23.1 / December 2, 2018
[Alexandr Topilski]
- Get key type context menu item
- Get value types by server version
- [Redis] Unlink command

1.23.0 / November 26, 2018
[Alexandr Topilski]
- Set client name
- Fixed create database update tree action
- [RocksDB] Default db name
- [SSDB] QPUSH, QRANGE commands

1.22.3 / November 22, 2018
[Alexandr Topilski]
- Stabilization

1.22.2 / November 21, 2018
[Alexandr Topilski]
- Removed not needed checks
- [RocksDB] Update sources to version 5.18.0

1.22.1 / November 19, 2018
[Alexandr Topilski]
- Rename branch

1.22.0 / November 12, 2018
[Alexandr Topilski]
- Up core lib to 1.4.0 

1.21.3 / November 8, 2018
[Alexandr Topilski]
- LZ4/Snappy/Bzip2 views
- BASE64 view
- Db types review
- [Redis] JSON.DEL command UI handling

1.21.2 / November 3, 2018
[Alexandr Topilski]
- Hexed values if symbols can't be displayed
- Zlib/GZip views

1.21.1 / November 2, 2018
[Alexandr Topilski]
- Stabilization

1.21.0 / October 31, 2018
[Alexandr Topilski]
- New settings strategy
- Binary content fixes

1.20.4 / October 22, 2018
[Alexandr Topilski]
- Stabilization
- Args limit changed

1.20.3 / October 18, 2018
[Alexandr Topilski]
- Fix create key routine
- Stabilization

1.20.2 / October 15, 2018
[Alexandr Topilski]
- Json view fixes
- [Redis] Redis 5.0 commands description

1.20.1 / October 12, 2018
[Alexandr Topilski]
- Auto revert views after queries
- FastoViewer for values

1.20.0 / October 8, 2018
[Alexandr Topilski]
- Core module
- Design edit dialog
- Key view

1.19.3 / October 1, 2018
[Alexandr Topilski]
- [Redis] Commands 5.0 handling
- Fix is_dir function for Windows

1.19.2 / September 27, 2018
[Alexandr Topilski]