@@ -1,5 +1,6 @@
 1.23.0 /
 [Alexandr Topilski]
+- Viewer for LIST and HASH types
 
 1.22.4 / December 17, 2018
 [Alexandr Topilski]
