@@ -18,25 +18,50 @@
 
 #include "gui/widgets/list_type_widget.h"
 
+#include <QEvent>
+#include <QPushButton>
+#include <QSplitter>
 #include <QVBoxLayout>
 
 #include "gui/widgets/fasto_viewer.h"
 
+#include "translations/global.h"
+
 namespace fastonosql {
 namespace gui {
 
-ListTypeWidget::ListTypeWidget(QWidget* parent) : base_class(parent), view_(nullptr) {
+ListTypeWidget::ListTypeWidget(QWidget* parent)
+    : base_class(parent), view_(nullptr), more_less_button_(nullptr), value_edit_(nullptr) {
   view_ = new ListTypeView;
+  more_less_button_ = new QPushButton;
   value_edit_ = new FastoViewer;
 
   VERIFY(connect(view_, &ListTypeView::dataChangedSignal, this, &ListTypeWidget::dataChangedSignal));
   VERIFY(connect(view_, &ListTypeView::rowChanged, this, &ListTypeWidget::valueUpdate, Qt::DirectConnection));
+  VERIFY(connect(more_less_button_, &QPushButton::clicked, this, &ListTypeWidget::toggleVisibleValueView));
 
-  QVBoxLayout* main = new QVBoxLayout;
+  // controls
+  QVBoxLayout* viewer_layout = new QVBoxLayout;
+  viewer_layout->setContentsMargins(0, 0, 0, 0);
+  viewer_layout->addWidget(view_);
+  viewer_layout->addWidget(value_edit_);
+
+  // options
+  QVBoxLayout* options_layout = new QVBoxLayout;
+  QSplitter* splitter = new QSplitter(Qt::Vertical);
+  options_layout->addWidget(splitter);
+  options_layout->addWidget(more_less_button_);
+
+  // main
+  QHBoxLayout* main = new QHBoxLayout;
   main->setContentsMargins(0, 0, 0, 0);
-  main->addWidget(view_);
-  main->addWidget(value_edit_);
+  main->addLayout(viewer_layout);
+  main->addLayout(options_layout);
   setLayout(main);
+
+  // sync
+  value_edit_->setVisible(false);
+  retranslateUi();
 }
 
 common::ArrayValue* ListTypeWidget::arrayValue() const {
@@ -66,6 +91,26 @@ void ListTypeWidget::setCurrentMode(ListTypeView::Mode mode) {
 void ListTypeWidget::valueUpdate(const ListTypeView::row_t& value) {
   value_edit_->clear();
   value_edit_->setText(value);
+}
+
+void ListTypeWidget::toggleVisibleValueView() {
+  value_edit_->setVisible(!value_edit_->isVisible());
+  syncMoreButton();
+}
+
+void ListTypeWidget::changeEvent(QEvent* e) {
+  if (e->type() == QEvent::LanguageChange) {
+    retranslateUi();
+  }
+  base_class::changeEvent(e);
+}
+
+void ListTypeWidget::syncMoreButton() {
+  more_less_button_->setText(value_edit_->isVisible() ? translations::trLess : translations::trMore);
+}
+
+void ListTypeWidget::retranslateUi() {
+  syncMoreButton();
 }
 
 }  // namespace gui
