@@ -1,5 +1,6 @@
 1.25.0 /
 [Alexandr Topilski]
+- Viewer for LIST and HASH types
 
 1.24.2 / December 17, 2018
 [Alexandr Topilski]
